welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:3: error: not found: value estsurBiscuit
  if (estsurBiscuit()) {nbBiscuit = nbBiscuit+1};} 
      ^